--- a/css/trading.css
+++ b/css/trading.css
@@ -1,10 +1,17 @@
 p {
     position: absolute;
-    top: 0;
+    top: 80px;
     left: 0;
     margin: 1em;
     z-index: 100;
-    font-size: 1.5em;
+    font-size: 1.2em;
     text-shadow: 0 0 10px #000;
-    color: yellowgreen;
+}
+
+div[role="group"] {
+    height: 8% !important;
+}
+
+button {
+    border-radius: 0px;
 }
